fix: Deprecated api